[project]
name = "gemini-agent-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.1.3",
    "google-search-results>=2.4.2",
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "langchain-google-genai>=2.0.7",
    "langgraph>=0.2.60",
    "python-dotenv>=1.0.1",
]
